<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context="com.example.abhirammoturi.theylist.SplashActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="5sp"
                android:text="@string/app_name"
                android:gravity="center"
                android:textAppearance="@android:style/TextAppearance.Material.Headline" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="5sp"
                android:background="@drawable/how_it_works_background"
                android:elevation="5sp"
                android:fadeScrollbars="false"
                android:orientation="vertical"
                android:padding="10sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10sp"
                    android:text="@string/howitworks"
                    android:textColor="@android:color/black"
                    android:textSize="22dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:layout_marginTop="5sp"
                    android:text="@string/step1"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:layout_marginTop="5sp"
                    android:text="@string/step2"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:layout_marginTop="5sp"
                    android:text="@string/step3"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5sp"
                    android:layout_marginTop="5sp"
                    android:text="@string/step4"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </LinearLayout>


            <Button
                android:id="@+id/register"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:defaultFocusHighlightEnabled="false"
                android:onClick="goToRegisterScreen"
                android:text="register" />

            <Button
                android:id="@+id/login"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:onClick="goToLoginScreen"
                android:text="login" />

            <TextView
                android:id="@+id/copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="@string/copyright"
                android:textAlignment="center" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
